# timeseries-migrations

./: .gitignore  README.md  pyproject.toml
examples/CSV from SFTP Share/: EFE_Zaehler.xlsx  LUG_Zaehler.xlsx  NZR_Sensoren.xlsx  example.py  station02_in_InfluxDB.txt  station11_in_InfluxDB.txt
examples/CSV from Samba Share/: README.md  csv_from_samba_share.py
examples/CSV_from_sftp/: Infos.txt  README.md  csv_from_sftp.py
examples/CSV_from_sftp/Beispielmessdaten/Gemeinsam/public/bbfly/station09/: MUC500_ID_6891d0802935_TS_1622702810.csv  MUC500_ID_6891d0802935_TS_1622703637.csv  MUC500_ID_6891d0802935_TS_1622704637.csv
examples/from_influx_v1/: from_influx_v1.py  mappings.py
examples/from_influx_v1/ultra_f/: from_influx_v1.py  mappings.py
tests/: test_timeseries_migrations_temp.py
