[tool.poetry]
name = "timeseries-migrations"
version = "0.1.0"
description = ""
authors = ["Karl <karlwolffgang@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gewv-timeseries-client = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
